# Rice-Yield-Prediction-API

./: README.md  data.py  ignore.py  main.py  ndvi.py  predict.py  pyproject.toml  requirements.txt  test.py  v.py  validation.py
